--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "@types/node": "^18.11.11",
     "terser": "^5.16.0",
     "typescript": "^4.8.3",
-    "vite": "^3.1.0"
+    "vite": "latest"
   }
 }
